K1J-475: Added salt to hashed personId logs. Minor cleanup for sonarq… (#233)